Spacing fixed in Score Panel

--- a/css/app.css
+++ b/css/app.css
@@ -86,7 +86,7 @@ h1 {
 }
 
 .score-panel .stars {
-    margin: 0;
+    margin: 0 1.8em 0 1.8em;
     padding: 0;
     display: inline-block;
     color: rebeccapurple;
@@ -99,7 +99,8 @@ h1 {
 
 .score-panel .restart {
     color: black;
-    float: right;
+    float: right;    margin: 0 1.8em 0 1.8em;
+
     cursor: pointer;
     font-size: 1.2em;
 }
